# chatbot

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: record.rs
src/: app.rs  args.rs  aws_api.rs  main.rs  message.rs  openai_api.rs  state.rs
src/app/: backend.rs  env.rs  frontend.rs  strategy.rs  ui.rs
src/app/backend/: call.rs  db.rs  state.rs  text.rs
src/app/frontend/: call.rs  state.rs  text.rs
src/args/subcommand/: call.rs  mod.rs
src/openai_api/: text_completion.rs
