[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
clap = "4.0.29"
crossterm = "0.25.0"
dotenv = "0.15.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = "1.22.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tui = "0.19.0"
tui-textarea = "0.2.0"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["macros"] }
