[package]
name = "chatbot"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
description = """
A terminal-based client for talking to OpenAI's GPT models. Conversations are saved to a local
SQLite database and may be resumed later."""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aws-config = "0.52.0"
aws-sdk-polly = "0.22.0"
aws-sdk-s3 = "0.22.0"
aws-sdk-transcribe = "0.22.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
dotenv = "0.15.0"
futures = "0.3.25"
once_cell = "1.16.0"
pin-project = "1.0.12"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.13", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono", "backup"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tui = "0.19.0"
tui-textarea = "0.2.0"

